@@ -4,6 +4,7 @@
 * Autocorrect rubocop offences.
 * Convert rspec syntax from `should` to `expect`.
 * Remove unused extension `Dir.mktmpdir`.
+* Upload retry logic for SFTP.
 
 ## 0.4.3 - 2023-06-29
 
